Ajuste da página, justificação

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
 
     <body>
-        <section>
+        <section class="section-container">
             <img src="assets/placeholder-logo.png" alt="Logo">
         </section>
 
-        <section>
+        <section class="section-container">
             <div>
                 <div>
                     <form action="">
@@ -34,4 +34,5 @@
             <p>Todos os direitos reservados.</p>
         </footer>
     </body>
+    <script src="js/script.js"></script>
 </html>
