Fixed background and font color

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
 
     <body>
-        <section class="section-container">
+        <section class="section-container background-section-one">
             <img src="assets/placeholder-logo.png" alt="Logo">
         </section>
 
-        <section class="section-container">
+        <section class="section-container background-section-two">
             <div>
                 <div>
                     <form action="">
