Finished CSS structure

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <meta name= "author" content= "Pedro Gordilho"/>
         <meta name= "viewport" content= "width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css"
-        
-        <link rel= "stylesheet" type= "text/css" href= "css/style.css"/>
-        <script type= "text/javascript" src= "js/script.js"> </script>
     </head>
 
     <body>
@@ -19,9 +16,9 @@
         </section>
 
         <section class="section-container background-section-two">
-            <div>
-                <div>
-                    <form action="">
+            <div class="card-container">
+                <div id="content">
+                    <form id="form">
                         <input type="text" placeholder="Nome">
                         <input type="text" placeholder="E-mail">
                         <input type="submit" value="Cadastrar">
