--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>Promoção imperdível</title>
+        <title>Black Friday</title>
         <meta charset = "UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name= "description" content= "Landing Page - Desafio Gama Academy"/>
@@ -11,25 +11,30 @@
     </head>
 
     <body>
-        <section class="section-container background-section-one">
-            <img src="assets/placeholder-logo.png" alt="Logo">
-        </section>
-
-        <section class="section-container background-section-two">
-            <div class="card-container">
-                <div id="content">
-                    <form id="form">
-                        <input type="text" placeholder="Nome">
-                        <input type="text" placeholder="E-mail">
-                        <input type="submit" value="Cadastrar">
-                    </form>
+        <main role="main">            
+            <section class="section-container background-section-one" role="img">
+                <img src="assets/placeholder-logo.png" alt="Logo">
+            </section>
+    
+            <section class="section-container background-section-two">
+                <div class="card-container">
+                    <div id="content">
+                        <form id="form" role="form">
+                            <input type="text" placeholder="Nome" id="nome" aria-level="Insira seu nome aqui">
+                            <input type="text" placeholder="E-mail" id="email" aria-level="Insira seu e-mail aqui">
+                            <input type="submit" value="Enviar">
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
 
-        <footer>
-            <p>Todos os direitos reservados.</p>
+        <footer role="contentinfo">
+            &copy; 2021 Pedro Gordilho.<br>
+            Todos os direitos reservados.<br><br>
+            Desafio #1 eCommerce, Gama Academy.<br>
         </footer>
     </body>
+    
     <script src="js/script.js"></script>
 </html>
