inclusão texto e ajustes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <main role="main">            
             <section class="section-container background-section-one" role="img">
                 <img src="assets/logo-black-friday.png" alt="Logo" style="width:50%;">
+                <p class= "texto-intro" role="doc-introduction"> A Black Friday 2021 chegou! Se cadastre e não perca nenhuma promoção!</p>
             </section>
+
     
             <section class="section-container background-section-two">
                 <div class="card-container">
-                    <p id="subscribe-text">Se cadastre aqui para receber todas as promoções por e-mail!</p>
+                    <h1 class="subscribe-text">Se cadastre aqui para receber todas as promoções por e-mail!</h1>
                     <div id="content">
                         <form id="form" role="form">
                             <input type="text" placeholder="Nome" id="nome" aria-label="Insira seu nome aqui" role="textbox">
